testing possible fix to renderer aspect ratio on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,13 +21,10 @@ a:hover {
   text-decoration: underline;
 }
 
-/* 
+
 .ui {
-  transition: transform .05s;
+  overflow: hidden;
 }
-.ui:active {
-  transform: scale(0.95);
-} */
 
 .text-center {
   text-align: center;
@@ -141,3 +138,16 @@ small,
 
 /* fonts */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&subset=latin-ext');
+
+
+
+/* fix overflowing canvas (created by THREEJS at a certain size) */
+html,
+body,
+.ui,
+video,
+canvas {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
